compiler/fir/analysis-tests/testData/resolve/topLevelDestruction.kt
// RUN_PIPELINE_TILL: FRONTEND
val <!SYNTAX!>(x, y)<!> = Pair(1, 2)
